--- a/capstone-design/css/review.css
+++ b/capstone-design/css/review.css
@@ -7,58 +7,49 @@
   font-style: normal;
 }
 
-.sub_container{
-	width: 1920px;
-	height: auto;
-}
-
 .sub_container input{
 	font-family: 'Chosunilbo_myungjo';
 }
 
-/* subPage header */
+/* 헤더 영역 */
+
 .sub_section1{
     width: 100%;
     height: 400px;
-    text-align: center;
     word-break: keep-all;
-    background-color: #083844;
+    background-image: url("../images/sub02_title4.png");
+	margin-top: 100px;
 }
-.sub_headerTitle{
-    display: flex;
+.ctgTitle{
     position: relative;
-    height: 400px;
-    width: 1920px;
-    min-width: 1200px;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
+    display: block;
+    padding-top: 50px;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
+    margin: 0 auto;
+    color: #333;
+    text-align: right;
+    font-size: 50px;
+    letter-spacing: 2px;
+    color: #b9971d;
 }
-.sub_subTilte{
-	display: block;
-    position: relative;
-	color: #fff;
-    width: 100%;
-    height: 50px;
-	font-size: 50px;
-	text-align: center;
-	word-break: keep-all;
-	padding-bottom: 30px;
+.ctgTitle > span{
+    font-weight: normal;
+    font-size: 40px;
 }
 
-/* small nevigation map */
 .smap{
 	display: block;
     position: relative;
 	color: #fff;
-    width: 100%;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
 	font-size: 15px;
-	text-align: center;
-	word-break: keep-all;
-    bottom: 0;
+	text-align: right;
+    margin: 0 auto;
 }
 .smap a{
-	color: #fff;
+	color: #333;
 	text-decoration-color: none;
 	text-decoration-line: none;
 }
@@ -66,6 +57,7 @@
 	padding: 5px;
 	display: inline-block;
 }
+
 
 /* 리뷰 작성하기 버튼 */
 .rvBtn{
@@ -92,7 +84,8 @@
 /* 리뷰 보기 */
 .reviewPage{
 	margin: 0 auto;
-	width: 1300px;
+	max-width: 1300px; /* 최대 너비를 1200px로 설정 */
+    width: 100%; /* 너비를 화면 너비의 90%로 설정 */
 	/*background-color: #ccc;*/
 	margin-bottom: 30px;
 }
@@ -104,10 +97,14 @@
 }
 .reviewContents{
 	margin: 0 auto;
-	width: 1300px;
+	max-width: 1300px; /* 최대 너비를 1200px로 설정 */
+    width: 100%; /* 너비를 화면 너비의 90%로 설정 */
+	display: flex;
+    flex-wrap: wrap;
 }
 .reviewBox{
-    width: 400px;
+    max-width: 400px;
+	width: 100%;
     height: 500px;
     background-color: #fff;
     border-radius: 20px;
@@ -120,6 +117,35 @@
 	align-items: center;
 	overflow: auto;
 }
+@media screen and (max-width: 1292px) {
+    .reviewBox {
+		max-width: 500px; /* 최대 너비를 600px로 설정 */
+    	width: 100%; /* 너비를 화면 너비의 100%로 설정 */
+		margin-left: auto; /* 왼쪽 마진을 자동으로 조정하여 가운데 정렬될 수 있도록 설정합니다. */
+        margin-right: auto; /* 오른쪽 마진도 자동으로 조정하여 가운데 정렬될 수 있도록 설정합니다. */
+    }
+}
+@media screen and (max-width: 1016px) {
+    .reviewBox {
+        max-width: 820px; /* 최대 너비를 600px로 설정 */
+    	width: 100%; /* 너비를 화면 너비의 100%로 설정 */
+		margin-left: auto; /* 왼쪽 마진을 자동으로 조정하여 가운데 정렬될 수 있도록 설정합니다. */
+        margin-right: auto; /* 오른쪽 마진도 자동으로 조정하여 가운데 정렬될 수 있도록 설정합니다. */
+    }
+	.rvBtn{
+		overflow: auto;
+		display: flex; /* 가운데 정렬을 위해 flexbox 사용 */
+		justify-content: center; /* 수평 중앙 정렬 */
+		align-items: center; /* 수직 중앙 정렬 */
+		margin: 0;
+	}
+	.rvBtn1{
+		height: 70px;
+		margin-bottom: 30px;	
+	}
+}
+
+
 .reviewBox div{
 	font-size: 18px;
 	margin-bottom: 20px;
