--- a/capstone-design/css/sub_brand.css
+++ b/capstone-design/css/sub_brand.css
@@ -7,14 +7,15 @@
     width: 100%;
     height: 400px;
     word-break: keep-all;
-    background-image: url(../images/sub02_title3.png);
+    background-image: url(../images/sub02_title4.png);
 	margin-top: 100px;
 }
 .ctgTitle{
     position: relative;
     display: block;
     padding-top: 50px;
-    width: 1200px;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
     margin: 0 auto;
     color: #333;
     text-align: right;
@@ -31,7 +32,8 @@
 	display: block;
     position: relative;
 	color: #fff;
-    width: 1200px;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
 	font-size: 15px;
 	text-align: right;
     margin: 0 auto;
