--- a/capstone-design/css/cart.css
+++ b/capstone-design/css/cart.css
@@ -18,34 +18,52 @@ input{
 	font-family: 'Chosunilbo_myungjo';
 }
 
-/* cart Page header */
-.cart_section1{
+/* 헤더 영역 */
+
+.sub_section1{
     width: 100%;
-    height: 350px;
-    text-align: center;
+    height: 400px;
     word-break: keep-all;
-    background-color: #083844;
-	margin-bottom: 50px;
+    background-image: url("../images/sub02_title4.png");
+	margin-top: 100px;
+	margin-bottom: 30px;
 }
-.cart_headerTitle{
-    display: flex;
+.ctgTitle{
     position: relative;
-    width: 1920px;
-    min-width: 1200px;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
+    display: block;
+    padding-top: 100px;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
+    margin: 0 auto;
+    color: #333;
+    text-align: right;
+    font-size: 50px;
+    letter-spacing: 2px;
+    color: #b9971d;
 }
-.cart_subTitle{
+.ctgTitle > span{
+    font-weight: normal;
+    font-size: 40px;
+}
+
+.smap{
 	display: block;
-  	position: relative;
+    position: relative;
 	color: #fff;
-  	width: 100%;
-  	height: 50px;
-	font-size: 50px;
-	text-align: center;
-	word-break: keep-all;
-	padding-bottom: 30px;
+    max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 90%; /* 너비를 화면 너비의 90%로 설정 */
+	font-size: 15px;
+	text-align: right;
+    margin: 0 auto;
+}
+.smap a{
+	color: #333;
+	text-decoration-color: none;
+	text-decoration-line: none;
+}
+.smap li{
+	padding: 5px;
+	display: inline-block;
 }
 
 /* cart progress content */
