--- a/capstone-design/css/mypage.css
+++ b/capstone-design/css/mypage.css
@@ -503,7 +503,6 @@
 }
 
 .ScrollableCommonProducts_flicking_wrap__qsVL0 .ScrollableCommonProducts_product_item__4oBG_ .ScrollableCommonProducts_thumb__l7PBq img {
-    width: 100%;
     height: 100%
 }
 
@@ -2872,7 +2871,7 @@
     }
 
     .SubmenuSection_my_menu_top__5E47e .SubmenuSection_btn_item__SRyp_ {
-        width: 25%;
+        width: 33%;
         padding: 0 0 0 8px;
         text-align: left
     }
@@ -3059,20 +3058,20 @@
 }
 
 .ZzimProductsSection_zzim_items__JRX7_ {
-    margin-top: -20px;
+    margin-top: 5px;
     padding-bottom: 20px
 }
 
 @media(min-width: 768px) {
     .ZzimProductsSection_zzim_items__JRX7_ {
-        margin-top:-24px;
+        margin-top: 5px;
         padding-bottom: 24px
     }
 }
 
 @media(min-width: 1152px) {
     .ZzimProductsSection_zzim_items__JRX7_ {
-        margin-top:-32px;
+        margin-top: 5px;
         padding-bottom: 32px
     }
 }
@@ -3564,4 +3563,18 @@
 }
 p:last-child {
     margin-bottom: 0em;
+}
+
+/* 아이콘 크기 조정 */
+.new_icon{
+	width: 30px;
+	height: auto;
+	margin-left: 9px;
+	margin-top: 10px;
+}
+.new_icon2{
+	width: 33px;
+	height: auto;
+	margin-left: 8px;
+	margin-top: 7px;
 }
