--- a/capstone-design/css/review.css
+++ b/capstone-design/css/review.css
@@ -84,8 +84,8 @@
 /* 리뷰 보기 */
 .reviewPage{
 	margin: 0 auto;
-	max-width: 1300px; /* 최대 너비를 1200px로 설정 */
-    width: 100%; /* 너비를 화면 너비의 90%로 설정 */
+	max-width: 1200px; /* 최대 너비를 1200px로 설정 */
+    width: 100%;
 	/*background-color: #ccc;*/
 	margin-bottom: 30px;
 }
@@ -98,12 +98,12 @@
 .reviewContents{
 	margin: 0 auto;
 	max-width: 1300px; /* 최대 너비를 1200px로 설정 */
-    width: 100%; /* 너비를 화면 너비의 90%로 설정 */
+    width: 100%;
 	display: flex;
     flex-wrap: wrap;
 }
 .reviewBox{
-    max-width: 400px;
+    max-width: 370px;
 	width: 100%;
     height: 500px;
     background-color: #fff;
