--- a/capstone-design/css/sub_beans.css
+++ b/capstone-design/css/sub_beans.css
@@ -53,7 +53,7 @@
 .beans_contents {
   max-width: 1200px; /* 최대 너비 지정 */
   margin: 0 auto; /* 가운데 정렬 */
-  padding: 20px;
+  padding-bottom: 20px;
 }
 
 .beans_info {
