사소한 css 몇개 수정

--- a/capstone-design/css/productDetail.css
+++ b/capstone-design/css/productDetail.css
@@ -184,10 +184,10 @@ body{padding: 50px;}
 	background: #ff555d;
 }
 .btns > a.btn2{
-	background: #ff555d;
+	background: #0e5a6d;
 }
 .btns > a.btn2:hover{
-	background: #b83333;
+	color: #ffd62c;
 }
 .goods_detail_detail > img{
 	width: 100%;
