--- a/capstone-design/css/manager.css
+++ b/capstone-design/css/manager.css
@@ -16,11 +16,18 @@ a {
 	color: inherit;
 }
 
+body{
+ -ms-overflow-style: none;
+ }
+ 
+::-webkit-scrollbar {
+  display: none;
+}
 
 /* 사이드 바 */
 .sidebar {
 	width: 200px;
-	height: 90%;
+	height: 100%;
 	background-color: #c15858;
 	color: #fff;
 	padding: 40px 0px;
@@ -55,7 +62,7 @@ a {
 .sidebar .logout span {
 	text-align: center;
 	bottom: 50px;
-	left: 60px;
+	left: 50px;
 	position: fixed;
 	font-size: 15px;
 }
@@ -67,7 +74,7 @@ a {
 /* iframe */
 iframe {
 	width: 100%;
-	height: 800px;
+	height: 900px;
 	border: none;
 }
 
@@ -84,14 +91,32 @@ iframe {
 	box-shadow: rgba(60, 64, 67, 0.05) 0px 1px 2px 0px, rgba(60, 64, 67, 0.02) 0px 2px 6px 2px;
 	margin-right: 20px;
 	text-align: center;
+	overflow-y: scroll;
 }
 .board3 {
 	margin-right: 0;
+}
+.board1 h2, .board2 h2, .board3 h2{
+	margin: 20px 0;
+}
+.board1 h3{
+	margin-bottom: 20px;
+}
+
+.board1::-webkit-scrollbar,
+.board2::-webkit-scrollbar,
+.board3::-webkit-scrollbar {
+  display: none;
+}
+.board1, .board2, .board3 {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 /* 콘텐츠 영역 */
 .main {
 	padding-left: 230px;
+	padding-right: 30px;
 	width: 87%;
 	display: inline-block;
 	background: #f9f9f9;
@@ -113,12 +138,17 @@ section h2 {
 	margin: 0;
 	margin-bottom: 20px;
 }
+section h3 {
+	margin: 0;
+	margin-bottom: 20px;
+}
 table {
 	width: 100%;
 	text-align: left;
 	border-collapse: collapse;
 	border: 1px solid #444;
 	font-size: 18px;
+	margin-bottom: 20px;
 }
 th {
     background-color: #cc8a8a;
