--- a/capstone-design/css/style.css
+++ b/capstone-design/css/style.css
@@ -109,6 +109,7 @@ border-radius: 30px;
 #header .nav_top .quick_menu{
 color: #333;
 transition: 0.3s;
+margin-left: 10px;
 }
 
 #header .nav_top .quick_menu a{
