manager 수정 및 추가/메인페이지 움직이는 캡슐 모델링 수정

--- a/capstone-design/css/manager.css
+++ b/capstone-design/css/manager.css
@@ -171,6 +171,15 @@ th, td {
     text-overflow: ellipsis;
 	display: inline-block;
 }
+.goods img {
+	width: 150px;
+	cursor: pointer;
+}
+.goods textarea {
+	width: 500px;
+	height: 200px;
+	font-size: 18px;
+}
 
 /* 뒤로가기, 삭제 버튼 */
 div.btn_back, div.btn_modify, div.btn_delete {
@@ -216,6 +225,8 @@ button {
 	height: 40px;
 	line-height: 40px;
 }
+
+/* 통계 부분. */
 #chart_wrap{
 	position: relative;
 }
